--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -12,5 +12,6 @@
         <file>delete.svg</file>
         <file>edit.svg</file>
         <file>Color Swatch 02.svg</file>
+        <file>Information Circle Contained.svg</file>
     </qresource>
 </RCC>
