--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -377,7 +377,7 @@ QScrollArea#scrollArea::viewport {
       <property name="styleSheet">
        <string notr="true">QLabel {
 	background-color: transparent;
-	boreder: 0px;
+	border: 0px;
 }</string>
       </property>
       <property name="text">
