--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -13,5 +13,10 @@
         <file>edit.svg</file>
         <file>Color Swatch 02.svg</file>
         <file>Information Circle Contained.svg</file>
+        <file>check.svg</file>
+        <file>close.svg</file>
+        <file>done_all.svg</file>
+        <file>notifications.svg</file>
+        <file>settings.svg</file>
     </qresource>
 </RCC>
