--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -339,6 +339,9 @@ QLineEdit:focus {
     border: 2px solid #140f10;  
 }</string>
       </property>
+      <property name="text">
+       <string>nb@example.com</string>
+      </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
@@ -368,6 +371,9 @@ QLineEdit:focus {
       <property name="inputMethodHints">
        <set>Qt::InputMethodHint::ImhHiddenText|Qt::InputMethodHint::ImhNoAutoUppercase|Qt::InputMethodHint::ImhNoPredictiveText|Qt::InputMethodHint::ImhSensitiveData</set>
       </property>
+      <property name="text">
+       <string>password123</string>
+      </property>
       <property name="echoMode">
        <enum>QLineEdit::EchoMode::Password</enum>
       </property>
@@ -378,7 +384,7 @@ QLineEdit:focus {
      <widget class="QPushButton" name="pushButton_login">
       <property name="geometry">
        <rect>
-        <x>506</x>
+        <x>405</x>
         <y>332</y>
         <width>89</width>
         <height>38</height>
@@ -427,6 +433,27 @@ QLineEdit:focus {
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_registration">
+      <property name="geometry">
+       <rect>
+        <x>528</x>
+        <y>332</y>
+        <width>168</width>
+        <height>38</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: #fafafa;
+	color: #140f10;
+	font: 16pt &quot;JetBrains Mono&quot;;
+	border-radius: 12px;
+}</string>
+      </property>
+      <property name="text">
+       <string>Регистрация</string>
       </property>
      </widget>
     </widget>
