--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -16,8 +16,8 @@
         <file>check.svg</file>
         <file>close.svg</file>
         <file>done_all.svg</file>
-        <file>notifications.svg</file>
         <file>settings.svg</file>
         <file>File text.svg</file>
+        <file>Inbox.svg</file>
     </qresource>
 </RCC>
